--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.collegegroup.processscheduling/com.collegegroup.processscheduling.HelloApplication</mainClass>
+              <mainClass>com.collegegroup.processscheduling/com.collegegroup.processscheduling.GUIControllers.Main</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
